updating based on comments on the review. Refactoring the code to make it make a bit more sense. Also handling the leading 'I' on interfaces a little better, so it's less likely to do something weird if the leading 'I' isn't there.

--- a/AutoImplement/AutoImplement.csproj
+++ b/AutoImplement/AutoImplement.csproj
@@ -41,10 +41,10 @@
       <Link>SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="CompositeBuilder.cs" />
+    <Compile Include="CSharpSourceWriter.cs" />
     <Compile Include="DecoratorBuilder.cs" />
     <Compile Include="IPatternBuilder.cs" />
     <Compile Include="MemberMetadata.cs" />
-    <Compile Include="StringWriter.cs" />
     <Compile Include="StubBuilder.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Program.cs" />
