--- a/AutoImplement.nuspec
+++ b/AutoImplement.nuspec
@@ -17,7 +17,7 @@
     <summary>
       Provide automatic implementations for Stubs, Decorators, and Composites.
     </summary>
-    <releaseNotes>Intitial Release</releaseNotes>
+    <releaseNotes>Improved support for generic interfaces / methods</releaseNotes>
     <projectUrl>https://github.com/haven1433/autoimplement</projectUrl>
     <copyright>Copyright 2018</copyright>
   </metadata>
