--- a/src/AutoImplement.Tests/AutoImplement.Tests.csproj
+++ b/src/AutoImplement.Tests/AutoImplement.Tests.csproj
@@ -7,8 +7,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{61F50AB9-CCB2-4E38-8EB3-61C80DD85F61}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutoImplement.Tests</RootNamespace>
+    <RootNamespace>HavenSoft.AutoImplement.Tests</RootNamespace>
     <AssemblyName>AutoImplement.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
