--- a/src/AutoImplement.Tests.Types/AutoImplement.Tests.Types.csproj
+++ b/src/AutoImplement.Tests.Types/AutoImplement.Tests.Types.csproj
@@ -33,6 +33,8 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ExampleClass.cs" />
+    <Compile Include="IExample.cs" />
     <Compile Include="PoorlyImplementedAbstractClass.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
