--- a/src/AutoImplement.Tests/AutoImplement.Tests.csproj
+++ b/src/AutoImplement.Tests/AutoImplement.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\xunit.runner.visualstudio.2.4.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\packages\xunit.runner.visualstudio.2.4.0\build\net20\xunit.runner.visualstudio.props')" />
+  <Import Project="..\..\packages\xunit.runner.visualstudio.2.4.1\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\packages\xunit.runner.visualstudio.2.4.1\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\..\packages\xunit.core.2.4.0\build\xunit.core.props" Condition="Exists('..\..\packages\xunit.core.2.4.0\build\xunit.core.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -21,6 +21,8 @@
     <IntermediateOutputPath>..\..\artifacts\$(AssemblyName)\obj\$(Configuration)\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,13 +50,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\artifacts\AutoImplement.Tests\codegen\StubPoorlyImplementedAbstractClass.cs" />
     <Compile Include="..\SharedAssemblyInfo.cs" />
+    <Compile Include="..\..\artifacts\$(AssemblyName)\codegen\StubExample.cs" />
+    <Compile Include="..\..\artifacts\$(AssemblyName)\codegen\StubExampleClass.cs" />
+    <Compile Include="..\..\artifacts\$(AssemblyName)\codegen\StubPoorlyImplementedAbstractClass.cs" />
     <Compile Include="..\..\artifacts\$(AssemblyName)\codegen\StubNotifyPropertyChanged.cs" />
     <Compile Include="ClassCompileTests.cs" />
+    <Compile Include="ClassStubUsageTests.cs" />
     <Compile Include="InterfaceCompileTests.cs" />
-    <Compile Include="FunctionalTests.cs" />
+    <Compile Include="FrameworkTests.cs" />
     <Compile Include="TestInterfaces.cs" />
+    <Compile Include="InterfaceStubUsageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
@@ -86,7 +92,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\xunit.core.2.4.0\build\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.core.2.4.0\build\xunit.core.props'))" />
     <Error Condition="!Exists('..\..\packages\xunit.core.2.4.0\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.core.2.4.0\build\xunit.core.targets'))" />
-    <Error Condition="!Exists('..\..\packages\xunit.runner.visualstudio.2.4.0\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.runner.visualstudio.2.4.0\build\net20\xunit.runner.visualstudio.props'))" />
+    <Error Condition="!Exists('..\..\packages\xunit.runner.visualstudio.2.4.1\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.runner.visualstudio.2.4.1\build\net20\xunit.runner.visualstudio.props'))" />
   </Target>
   <Import Project="..\..\packages\xunit.core.2.4.0\build\xunit.core.targets" Condition="Exists('..\..\packages\xunit.core.2.4.0\build\xunit.core.targets')" />
   <PropertyGroup>
@@ -96,6 +102,8 @@ $(SolutionDir)artifacts\AutoImplement\bin\$(ConfigurationName)\AutoImplement "$(
 if not exist $(SolutionDir)artifacts\$(AssemblyName)\codegen mkdir $(SolutionDir)artifacts\$(AssemblyName)\codegen
 move /Y StubNotifyPropertyChanged.cs $(SolutionDir)artifacts\$(AssemblyName)\codegen
 move /Y StubPoorlyImplementedAbstractClass.cs $(SolutionDir)artifacts\$(AssemblyName)\codegen
+move /Y StubExample.cs $(SolutionDir)artifacts\$(AssemblyName)\codegen
+move /Y StubExampleClass.cs $(SolutionDir)artifacts\$(AssemblyName)\codegen
 del *.cs
 </PreBuildEvent>
   </PropertyGroup>
