--- a/src/System.Delegation/System.Delegation.csproj
+++ b/src/System.Delegation/System.Delegation.csproj
@@ -31,6 +31,7 @@
     </Compile>
     <Compile Include="EventImplementation.cs" />
     <Compile Include="PropertyImplementation.cs" />
+    <Compile Include="TypeArrayEqualityComparer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
