--- a/AutoImplement.nuspec
+++ b/AutoImplement.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>HavenSoft.AutoImplement</id>
-    <version>1.0.2</version>
+    <version>1.1.0</version>
     <authors>Benjamin Popp</authors>
     <owners>bpopp</owners>
     <licenseUrl>https://github.com/haven1433/autoimplement/blob/master/LICENSE</licenseUrl>
@@ -17,7 +17,7 @@
     <summary>
       Provide automatic implementations for Stubs, Decorators, and Composites.
     </summary>
-    <releaseNotes>Improved support for generic interfaces / methods</releaseNotes>
+    <releaseNotes>Added support for stubs for classes. Improved stub support for generic methods.</releaseNotes>
     <projectUrl>https://github.com/haven1433/autoimplement</projectUrl>
     <copyright>Copyright 2018</copyright>
   </metadata>
