Added "ConstructionCompletion" to System.Delegation.   I was able to make it the same every time, so it doesn't have to be codegen anymore. Add more stuff to MemberMetadata   Access and ReturnClause were being made the same way multiple times. Minor code-cleanup for ClassStubBuilder

--- a/src/System.Delegation/System.Delegation.csproj
+++ b/src/System.Delegation/System.Delegation.csproj
@@ -29,6 +29,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ConstructionCompletion.cs" />
     <Compile Include="EventImplementation.cs" />
     <Compile Include="PropertyImplementation.cs" />
     <Compile Include="TypeArrayEqualityComparer.cs" />
